Project

General

Profile

Actions

Bug #16253

closed

rbd-mirror: do not re-use image id from mirror directory if creating image

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the local image specified in the mirroring directory doesn't exist during bootstrap, do not attempt to re-use the old id after creating a new local image. This will result in a loop between attempting to create the local image and attempting to open it.

2016-06-13 01:29:04.125056 7fdb48ff9700 -1 rbd::mirror::image_replayer::OpenLocalImageRequest: 0x7fdb1c007c70 handle_open_image : failed to open image '100b41b71efb': (2) No such file or directory
...
2016-06-13 01:28:34.123629 7fdbb2ffd700 -1 rbd::mirror::image_replayer::BootstrapRequest: 0x7fdb6002a170 handle_create_local_image: failed to create local image: (17) File exists

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16265: jewel: rbd-mirror: do not re-use image id from mirror directory if creating imageResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

... it can accidentally pull an old image id from the local mirroring directory if the image deleter scheduled more than one deletion for the same image.

Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16265: jewel: rbd-mirror: do not re-use image id from mirror directory if creating image added
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF